Fix contrast issues for better accessibility
Fixes #198

--- a/assets/css/_layout/form-widgets.css
+++ b/assets/css/_layout/form-widgets.css
@@ -73,7 +73,7 @@ button, a.button {
     padding-right: 20px;
 
     background: #f8f8f8;
-    color: #D66200;
+    color: #ba5400;
     font-weight: bold;
     border-color: #ddd;
     box-shadow: 0 0 2px rgba(0,0,0, 0.17);
