--- a/assets/css/_layout/global.css
+++ b/assets/css/_layout/global.css
@@ -43,7 +43,7 @@ html {
 }
 
 a {
-    color: #D66200;
+    color: #b85200;
     transition: linear 0.1s color;
 
     text-decoration: none;
