--- a/assets/css/_layout/information.css
+++ b/assets/css/_layout/information.css
@@ -11,7 +11,7 @@
     /* https://icons8.com/icon/76/info */
 }
 .information a {
-    color: #0088C6;
+    color: #0076AB;
 }
 
 @media (max-width: 767px)
