--- a/assets/css/_layout/radio-tables-list.css
+++ b/assets/css/_layout/radio-tables-list.css
@@ -34,6 +34,7 @@
 .radio-tables-list-title a {
     display: block;
     font-size: 1.6em;
+    color: #D66200;
 }
 
 .radio-tables-list-details dl {
