--- a/assets/css/_layout/remove-dialog.css
+++ b/assets/css/_layout/remove-dialog.css
@@ -73,7 +73,7 @@
     box-shadow: none;
 
     color: #e10000;
-    opacity: 0.55;
+    opacity: 0.95;
 
     /* https://www.iconfinder.com/icons/1041650/garbage_rubbish_trash_icon */
     background-image: url("data:image/svg+xml,%3Csvg height='32' viewBox='-0.5 -0.7 31 32' width='31' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath clip-rule='evenodd' d='M29.8 8.3zm-2 2h-1v18c0 1.1-.9 2-2 2h-19c-1.1 0-2-.9-2-2v-18H2c-1.1 0-2-.9-2-2s.9-2 2-2h6.9C9.2 2.8 12 0 15.4 0s6.3 2.8 6.5 6.3h5.8c1.1 0 2 .9 2 2 .1 1.1-.8 2-1.9 2zM15.4 3.2c-1.8 0-3.2 1.3-3.4 3.1h6.9c-.3-1.7-1.7-3.1-3.5-3.1zm8.4 8.3c0-.5-.2-.9-.5-1.1h-16c-.3.2-.5.6-.5 1.1v14.7c0 .9.7 1.6 1.6 1.6h13.8c.9 0 1.6-.7 1.6-1.6V11.5zm-5 .8h3v14h-3v-14zm-5 0h3v14h-3v-14zm-5 0h3v14h-3v-14zM0 8.3z' fill='%23e10000' fill-rule='evenodd'/%3E%3C/svg%3E");
