--- a/assets/css/radio-station/edit-add.css
+++ b/assets/css/radio-station/edit-add.css
@@ -11,7 +11,7 @@
     opacity: 0.5;
 }
 .radio-station-disabled-column label, .radio-station-disabled-column .unit-label {
-    opacity: 0.6;
+    opacity: 0.65;
     text-decoration: line-through;
     text-decoration-color: rgba(0,0,0, 0.5);
 }
